// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterButton with default props match snapshot 1`] = `
<button
  className="filter "
  data-active={false}
  disabled={false}
  onClick={[Function]}
  title=""
>
  <span
    className="badge"
  >
    0
  </span>
</button>
`;

exports[`FilterButton with props match snapshot 1`] = `
<button
  className="filter filter1"
  data-active={true}
  disabled={true}
  onClick={[Function]}
  title="ALL"
>
  ALL
  <span
    className="badge"
  >
    7
  </span>
</button>
`;
